<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="470dp"
        android:orientation="vertical" >
        
    <TextView  
    style="@style/CodeFont"    
	android:id="@+id/note_textview"  
    android:text="@string/note_list"
	android:textSize="30dip"
	android:textStyle="bold"
	android:paddingTop="6dip"
	android:paddingBottom="6dip"/>

   	<ListView
   	    android:id="@+id/ListViewAppend"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:scrollbars="vertical" />

   	 </LinearLayout>

   	  <LinearLayout
   	      android:id="@+id/linearLayout"
   	      android:layout_width="fill_parent"
   	      android:layout_height="match_parent"
   	      android:orientation="vertical" >

        <RadioGroup
            android:id="@id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_1_n"
                android:tag="radio_button0"
                android:text="@string/main_home" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_2_n"
                android:tag="radio_button1"
                android:text="@string/main_news" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_3_n"
                android:tag="radio_button2"
                android:text="@string/main_my_info" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_4_n"
                android:tag="radio_button3"
                android:text="@string/menu_search" />

            <RadioButton
                android:id="@+id/radio_button4"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:tag="radio_button4"
                android:text="@string/more" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>